--- a/Laboratory/View/LabAssignmentTbVCell.xib
+++ b/Laboratory/View/LabAssignmentTbVCell.xib
@@ -12,28 +12,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="KGk-i7-Jjw" customClass="LabAssignmentTableViewCell" customModule="Laboratory" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="KGk-i7-Jjw" customClass="LabAssignmentTbVCell" customModule="Laboratory" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="379" height="58"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="379" height="57.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lab Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wXn-1e-hnM">
-                        <rect key="frame" x="16" y="18.5" width="78" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lab Assignment Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wXn-1e-hnM">
+                        <rect key="frame" x="16" y="18.5" width="172.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoDark" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MMi-sO-iKG">
+                        <rect key="frame" x="341" y="18" width="22" height="22"/>
+                        <connections>
+                            <action selector="LabAssignmentInfoBtn:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Wbr-V2-S4Z"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="MMi-sO-iKG" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="GNk-Gm-wRI"/>
                     <constraint firstItem="wXn-1e-hnM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Tzn-dA-Vf8"/>
+                    <constraint firstItem="MMi-sO-iKG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="X7Q-QB-jZj"/>
                     <constraint firstItem="wXn-1e-hnM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="myf-s0-YvU"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="LabNameLabel" destination="wXn-1e-hnM" id="Ws1-j9-Ezx"/>
+                <outlet property="labAssigmentNameLbl" destination="wXn-1e-hnM" id="Ws1-j9-Ezx"/>
             </connections>
             <point key="canvasLocation" x="88.799999999999997" y="53.073463268365821"/>
         </tableViewCell>
