--- a/Laboratory/Base.lproj/Main.storyboard
+++ b/Laboratory/Base.lproj/Main.storyboard
@@ -146,14 +146,17 @@
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFg-Br-fnW">
-                                <rect key="frame" x="0.0" y="120" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="120" width="375" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="40e-Du-Pvn"/>
+                                    <constraint firstAttribute="height" constant="40" id="40e-Du-Pvn"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="View Added Items"/>
+                                <connections>
+                                    <segue destination="jgY-aE-Gwq" kind="presentation" id="Xky-ae-rDi"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="d9j-bD-7Oh">
-                                <rect key="frame" x="0.0" y="150" width="375" height="517"/>
+                                <rect key="frame" x="0.0" y="160" width="375" height="507"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -180,6 +183,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ase-Ob-Y7i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2231" y="45"/>
+        </scene>
+        <!--Added Lab ItemTVC-->
+        <scene sceneID="cUq-ek-ZBS">
+            <objects>
+                <tableViewController id="L1w-c4-kzP" customClass="AddedLabItemTVC" customModule="Laboratory" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="osr-pZ-TcZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="an1-d8-jjP">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="an1-d8-jjP" id="qns-Cc-qGb">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="L1w-c4-kzP" id="jho-Pl-48b"/>
+                            <outlet property="delegate" destination="L1w-c4-kzP" id="Z1H-gm-mj5"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="zDM-ZA-sFa">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="0Ys-V0-pKR">
+                            <connections>
+                                <action selector="done:" destination="L1w-c4-kzP" id="mSG-et-kmy"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RQN-RL-h1Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2999" y="769"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GVG-qi-G2A">
@@ -216,6 +254,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ksE-EF-tK4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="806" y="45"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="VCr-4u-pT3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jgY-aE-Gwq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ej0-1o-yjd">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="L1w-c4-kzP" kind="relationship" relationship="rootViewController" id="MG4-SR-Fnw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n9i-Y1-Uqv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2229.5999999999999" y="768.66566716641682"/>
         </scene>
     </scenes>
 </document>
